--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,70 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity android:name=".MenuActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MENU" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity android:name=".SignUpActivity"
+            android:exported="true">
+
+           <intent-filter>
+               <action android:name="android.intenr.action.SIGNUP" />
+
+                <category android:name="android.intent.cateogyr.LAUNCHER" />
+
+           </intent-filter>
+        </activity>
+        <activity android:name=".SinglePlayerActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intenr.action.SINGLEPLAYER" />
+
+                <category android:name="android.intent.cateogyr.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
+        <activity android:name=".MultiPlayerActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intenr.action.MULTIPLAYER" />
+
+                <category android:name="android.intent.cateogyr.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
+        <activity android:name=".NewGameActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intenr.action.NEWGAME" />
+
+                <category android:name="android.intent.cateogyr.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
+        <activity android:name=".GameActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intenr.action.GAME" />
+
+                <category android:name="android.intent.cateogyr.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
