[INIT] change password

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,16 @@
 
             </intent-filter>
         </activity>
+        <activity android:name=".AccountActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intenr.action.Account" />
+
+                <category android:name="android.intent.cateogyr.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
