--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,11 @@
         android:icon="@mipmap/maze_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.Larble"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:ignore="LockedOrientationActivity">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +30,7 @@
 
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.LOGIN" />
@@ -41,6 +44,7 @@
         </activity>
 
         <activity android:name=".MenuActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MENU" />
@@ -54,6 +58,7 @@
         </activity>
 
         <activity android:name=".SignUpActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
 
            <intent-filter>
@@ -64,6 +69,7 @@
            </intent-filter>
         </activity>
         <activity android:name=".SinglePlayerActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
 
             <intent-filter>
@@ -74,6 +80,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MultiPlayerActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
 
             <intent-filter>
@@ -84,6 +91,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewGameActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
             android:exported="true">
 
@@ -106,6 +114,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".LeaderboardActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
 
             <intent-filter>
@@ -130,6 +139,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
 
             <intent-filter>
@@ -140,6 +150,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AccountActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
 
             <intent-filter>
@@ -161,6 +172,7 @@
         </activity>
 
         <activity android:name=".GameOverActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
 
             <intent-filter>
